--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Kawaii Pomodoro</title>
+  <title>Cute Pomodoro Timer</title>
   <style>
     :root{
       --bg:#f7f2e8;
