--- a/index.html
+++ b/index.html
@@ -162,7 +162,12 @@
   </style>
 </head>
 <body>
- 
+   <div class="phone">
+    <div class="status">
+      <div id="clock"></div>
+      
+      <div></div>
+    </div>
 
     <div class="title" id="modeTitle">Time to Work...</div>
 
