--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ setRandomCharacter(mode);
 
   // Init
   elTitle.textContent = TITLES[mode];
-  elHero.src = setRandomCharacter(mode);
+  elHero.src = "bunny.png";
   render();
   applyDurations({ resetCurrent: true });
 })();
